wal-macros/tests/html_macro_tests/elements/element_with_single_literal_fail.rs
use wal_macros::html;

fn main() {
    html! { <div> b"val" </div> };
}
